--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     </head>
     <body>
         <nav id = "desktop-nav">
-            <div class = "logo">Tzuying Yu</div>
+            <div class = "logo">
+                <a herf = "https://tzuying-yu-nicole.netlify.app/">TZUYING YU</a>
+            </div>
             <div>
                 <ul class = "nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </div>
@@ -42,14 +44,13 @@
                  />
             </div>
             <div class = "section_text">
-                <p class="section_text_p1">Hello, I'm </p>
-                <h1 class="title">Tzuying Yu</h1>
-                <p class="section_text_p2">Data Analyst/Coffee Ethusiast</p>
+                <h1 class="title">👋🏻 Hi there :)</h1>
+                <p>Welcome to My Portfolio!</p>
+                <p class="section_text_color">I'm a data analyst, and an UofT alumni.</p>
+                <p class = "section_text_end">I make data accessible, actionable, and impactful.</p>
                 <div class = "btn-container">
                     <button class = "btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
                         Download Resume</button>
-                    <button class = "btn btn-color-1" onclick="location.href ='./#conact'">
-                        Contact Info</button>
                 </div>
                 <div id = "social-container">
                     <img src="./assets/linkedin.png" 
@@ -61,278 +62,14 @@
                     alt="my Github profile" 
                     class = "icon"
                     onclick="location.href='https://github.com/tzuying-nicoleyu'"/>
-                </div>
-        </section>
-        <section id="about">
-            <p class="section_text_p1">Get To Know More</p>
-            <h1 class ="title">About Me</h1>
-            <div class = "section-container">
-                <div class = "section_pic-container">
-                    <img 
-                    src="./assets/about-pic.png"
-                    alt = "Profile Picture"
-                    class = "about-pic"
-                    />
-                </div>
-                <div class = "about-details-container">
-                    <div class = "about-container">
-                        <div class = "details-container">
-                            <img 
-                                src="./assets/experience.png"
-                                alt = "Experience icon"
-                                class = "icon"
-                            />
-                            <h3>Experience</h3>
-                            <p>2+ years<br/>Data Analysis</p>
-                        </div>
-                        <div class = "details-container">
-                            <img
-                                src = "./assets/education.png"
-                                alt = "Education icon"
-                                class = "icon"
-                            />
-                            <h3>Education</h3>
-                            <p>HB.Sc. Bachelors of Science Degree</p>
-                        </div>
-                    </div>
-                    <div class = "text-container">
-                        <p>
-                        I am a data analyst with a passion for data visualization and storytelling. 
-                        I am a recent graduate from the University of Toronto with a degree in Statistics, Economics and Mathematics.
-                        I have experience in data analysis, data visualization, and machine learning. 
-                        I am also a coffee enthusiast and enjoy exploring new coffee shops in my free time.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <img 
-                src="./assets/arrow.png" 
-                alt="Arrow icon"
-                class = "icon arrow"
-                onclick="location.href= '/#experience'"
-            />
-        </section>
-        <section id="experience">
-            <p class = "section_text_p1"> Explore My</p>
-            <h1 class = "title">Experience</h1>
-            <div class = "experience-details-container">
-                <div class = "about-container">
-                    <div class = "details-container">
-                        <h2 class = "experience-sub-title">Data Analyst</h2>
-                        <div class="article-container">
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>Adobe</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>Figma</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>Javascript</h3>
-                                    <p>Intermediate</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>HTML</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </ariticle>
-                        </div>
-                    </div>
-                    <div class = "details-container">
-                        <h2 class = "experience-sub-title">Data Analyst</h2>
-                        <div class="article-container">
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>CSS</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>Python</h3>
-                                    <p>Intermediate</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>R</h3>
-                                    <p>Intermediate</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>SQL</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </ariticle>
-                            <ariticle>
-                                <img 
-                                    src="./assets/checkmark.png"
-                                    alt = "Experience icon"
-                                    class = "icon"
-                                />
-                                <div>
-                                    <h3>MS Office</h3>
-                                    <p>Intermediate</p>
-                                </div>
-                            </ariticle>
-                        </div>
-                    </div>
-                </div>
-                <img 
-                src="./assets/arrow.png" 
-                alt="Arrow icon"
-                class = "icon arrow"
-                onclick="location.href= '/#projects'"
-                />
-            </div>
-        </section>
-        <section id="projects">
-            <p class = "section_text_p1">Browse My Recent</p>
-            <h1 class = "title">Projects</h1>
-            <div class = "experience-details-container">
-                <div class = "about-container">
-                    <div class = "details-container color-container">
-                        <div class = "article-container">
-                            <img 
-                                src = "./assets/project-1.png"
-                                alt = "Project 1"
-                                class = "project-img"
-                            />
-                        </div>
-                        <h2 class = "experience-sub-title project-title">Project One</h2>
-                        <div class = "btn-container">
-                            <button
-                                class = "btn btn-color-2 project-btn"
-                                onclick = "location.href='https://github.com/'">
-                                Github
-                            </button>
-                        </div>
-                    </div>
-                    <div class = "details-container color-container">
-                        <div class = "article-container">
-                            <img 
-                                src = "./assets/project-2.png"
-                                alt = "Project 2"
-                                class = "project-img"
-                            />
-                        </div>
-                        <h2 class = "experience-sub-title project-title">Project Two</h2>
-                        <div class = "btn-container">
-                            <button
-                                class = "btn btn-color-2 project-btn"
-                                onclick = "location.href='https://github.com/'">
-                                Github
-                            </button>
-                        </div>
-                    </div>
-                    <div class = "details-container color-container">
-                        <div class = "article-container">
-                            <img 
-                                src = "./assets/project-3.png"
-                                alt = "Project 3"
-                                class = "project-img"
-                            />
-                        </div>
-                        <h2 class = "experience-sub-title project-title">Project Three</h2>
-                        <div class = "btn-container">
-                            <button
-                                class = "btn btn-color-2 project-btn"
-                                onclick = "location.href='https://github.com/'">
-                                Github
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <img 
-                src="./assets/arrow.png" 
-                alt="Arrow icon"
-                class = "icon arrow"
-                onclick="location.href= '/#contacts'"
-                />
-            </div>
-        </section>
-        <section id = "contacts">
-            <p class = "section_text_p1"> Get In Touch</p>
-            <h1 class ="title">Contact Me</h1>
-            <div class = "contact-info-upper-container">
-                <div class = "contact-info-container">
-                    <img
-                        src="./assets/email.png"
-                        alt = "Email icon"
-                        class = "icon email-icon contact-icon"
-                    />
-                    <p><a href = "mailto:tzuying.yu@outlook.com">tzuying.yu@outlook.com</a></p>
-                </div>
-                <div class = "contact-info-container">
-                    <img
-                        src="./assets/linkedin.png"
-                        alt = "Email icon"
-                        class = "icon contact-icon"
-                    />
-                    <p><a href = "https://www.linkedin.com/in/tzu-ying-yu-nicole0817/">LinkedIn</a></p>
-                </div>
-            </div>
+                    
+                    <img src="./assets/email.png" 
+                    alt="" 
+                    class = "icon_email"
+                    onclick="location.href='mailto:tzuying.yu@outlook.com'"/>
+                </div>            
         </section>
         <footer>
-            <nav>
-                <div class = "nav-links-container">
-                    <ul class = "nav-links">
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
-                    </ul>
-                </div>
-            </nav>
             <p>Copyright &#169; 2024 Tzuying Yu. All Right Reserved.</p>
         </footer>
         <script src="scripts.js"></script> 
