update project gallery

--- a/contacts.html
+++ b/contacts.html
@@ -31,10 +31,10 @@
                     <span></span>
                 </div>
                 <div class  = "menu-links">
-                    <li><a href="#about"onclick = "toggleMenu()">About</a></li>
-                    <li><a href="#experience"onclick = "toggleMenu()">Experience</a></li>
-                    <li><a href="#projects"onclick = "toggleMenu()">Projects</a></li>
-                    <li><a href="#contacts"onclick = "toggleMenu()">Contacts</a></li>
+                    <li><a href="about.html"onclick = "toggleMenu()">About</a></li>
+                    <li><a href="projects.html"onclick = "toggleMenu()">Projects</a></li>
+                    <li><a href="blogs.html"onclick = "toggleMenu()">Blogs</a></li>
+                    <li><a href="contacts.html"onclick = "toggleMenu()">Contacts</a></li>
                 </div>
             </div>
         </nav>
@@ -42,7 +42,7 @@
             <section id = "contact">
                 <div class="contact-container">
                     <h1 class="title contact-title"> Let's Connect!😊</h1>
-                    <p class="email">My email is tzuying.yu@outlook.</p>
+                    <p class="email">My email is tzuying.yu@outlook.com</p>
                     <div class = "contact-social-container">
                         <img src="./assets/linkedin.png" 
                         alt="my linkedin profile" 
