--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <span></span>
                 </div>
                 <div class  = "menu-links">
-                    <li><a href="#about"onclick = "toggleMenu()">About</a></li>
-                    <li><a href="#experience"onclick = "toggleMenu()">Experience</a></li>
-                    <li><a href="#projects"onclick = "toggleMenu()">Projects</a></li>
-                    <li><a href="#contacts"onclick = "toggleMenu()">Contacts</a></li>
+                    <li><a href="about.html"onclick = "toggleMenu()">About</a></li>
+                    <li><a href="blogs.html"onclick = "toggleMenu()">Blogs</a></li>
+                    <li><a href="projects.html"onclick = "toggleMenu()">Projects</a></li>
+                    <li><a href="contacts.html"onclick = "toggleMenu()">Contacts</a></li>
                 </div>
             </div>
         </nav>
