fixing some display bug on responsive web features

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <body> 
 
         <nav id="desktop-nav">
-            <div class="logo">
-                <a href = "index.html">TZUYING YU</a>
+            <div class = "logo">
+                <a href = "https://tzuying-yu-nicole.netlify.app/">TZUYING YU</a>
             </div>
             <div>
                 <ul class = "nav-links">
@@ -25,18 +25,22 @@
         </nav>
 
         <nav id = "hamburger-nav">
-            <div class = "logo">Tzuying Yu</div>
+            <div class = "logo">
+                <a href = "https://tzuying-yu-nicole.netlify.app/">TZUYING YU</a>
+            </div>
             <div class = "hamburger-menu">
                 <div class = "hamburger-icon" onclick = "toggleMenu()">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
-                <div class  = "menu-links">
-                    <li><a href="about.html"onclick = "toggleMenu()">About</a></li>
-                    <li><a href="projects.html"onclick = "toggleMenu()">Projects</a></li>
-                    <li><a href="blogs.html"onclick = "toggleMenu()">Blogs</a></li>
-                    <li><a href="contacts.html"onclick = "toggleMenu()">Contacts</a></li>
+                <div class = "menu-links">
+                    <ul>
+                        <li><a href="about.html" onclick = "toggleMenu()">About</a></li>
+                        <li><a href="projects.html" onclick = "toggleMenu()">Projects</a></li>
+                        <li><a href="blogs.html" onclick = "toggleMenu()">Blogs</a></li>
+                        <li><a href="contacts.html" onclick = "toggleMenu()">Contacts</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
