--- a/blogs.html
+++ b/blogs.html
@@ -11,8 +11,8 @@
     
     <body>
         <nav id="desktop-nav">
-            <div class="logo">
-                <a href = "index.html">TZUYING YU</a>
+            <div class = "logo">
+                <a href = "https://tzuying-yu-nicole.netlify.app/">TZUYING YU</a>
             </div>
             <div>
                 <ul class = "nav-links">
