--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
     <body>
         <nav id="desktop-nav">
             <div class="logo">
-                <a href = "index.html">TZUYING YU</a>
+                <a href = "https://tzuying-yu-nicole.netlify.app/">TZUYING YU</a>
             </div>
             <div>
                 <ul class = "nav-links">
@@ -42,7 +42,10 @@
             <section id = "contact">
                 <div class="contact-container">
                     <h1 class="title contact-title"> Let's Connect!😊</h1>
-                    <p class="email">My email is tzuying.yu@outlook.com</p>
+                    <p class="email">
+                        <span class="email-label">My email is </span>
+                        <span class="email-address">tzuying.yu@outlook.com</span>
+                    </p>
                     <div class = "contact-social-container">
                         <img src="./assets/linkedin.png" 
                         alt="my linkedin profile" 
